--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_1_select_relation.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_1_select_relation.html
@@ -1,5 +1,5 @@
 {% extends 'aristotle_mdr_links/actions/add_link_wizard_0_base.html' %}
-{% load compile_static i18n %}
+{% load i18n %}
 {% load static from staticfiles %}
 
 {% block title %}Add new link - Step 1: Select a relationship{% endblock %}
