--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_2_select_concepts.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_2_select_concepts.html
@@ -1,5 +1,5 @@
 {% extends 'aristotle_mdr_links/actions/add_link_wizard_0_base.html' %}
-{% load compile_static i18n util_tags %}
+{% load i18n util_tags %}
 {% load static from staticfiles %}
 
 {% block title %}Create link - select concepts{% endblock %}
