--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/changeStatus.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/changeStatus.html
@@ -1,7 +1,7 @@
 {% extends "aristotle_mdr/helpers/wizard_form_modal.html" %}
 
 {% load aristotle_tags %}
-{% load compile_static i18n %}
+{% load i18n %}
 {% load static %}
 {% load render_bundle from webpack_loader %}
 
