--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 compile_static %}
+{% load bootstrap3 %}
 {% load static from staticfiles %}
 {% load notifications_tags %}
 <!--[if lt IE 9]>
