--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/user_request_accept.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/user_request_accept.html
@@ -1,5 +1,5 @@
 {% extends "aristotle_mdr/helpers/wizard_form_modal.html" %}
-{% load compile_static i18n %}
+{% load i18n %}
 {% load aristotle_tags %}
 
 {% block title %}Accept Request{% endblock %}
