--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/registration/password_reset_complete.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/registration/password_reset_complete.html
@@ -1,5 +1,5 @@
 {% extends "aristotle_mdr/base.html" %}
-{% load i18n compile_static %}
+{% load i18n %}
 {% load static from staticfiles %}
 {% load render_bundle from webpack_loader %}
 
