--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/actions/edit_inclusion.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/actions/edit_inclusion.html
@@ -1,5 +1,5 @@
 {% extends request.is_ajax|yesno:"aristotle_mdr/base_ajax.html,aristotle_mdr/base.html" %}
-{% load aristotle_tags compile_static i18n %}
+{% load aristotle_tags i18n %}
 
 {% block title %}{{ item.dss.name }} - Modifying inclusion of {{ item.include.name }}{% endblock %}
 {% block content %}
