--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/generic/templates/aristotle_mdr/generic/actions/alter_foreign_key.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/generic/templates/aristotle_mdr/generic/actions/alter_foreign_key.html
@@ -1,5 +1,5 @@
 {% extends request.is_ajax|yesno:"aristotle_mdr/base_ajax.html,aristotle_mdr/base.html" %}
-{% load compile_static i18n %}
+{% load i18n %}
 {% load static from staticfiles %}
 
 {% block title %}Adding relationship for {{ item.name }}{% endblock %}
@@ -36,8 +36,4 @@
         </button>
     </div>
 </form>
-    {% block extra_head_scripts %}
-        <link rel="stylesheet" href="{% static 'aristotle_mdr/aristotle.moveable.less'|compile %}" />
-        {{ form.media }}
-    {% endblock %}
 {% endblock %}
