--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/generic/templates/aristotle_mdr/generic/actions/confirm_delete.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/generic/templates/aristotle_mdr/generic/actions/confirm_delete.html
@@ -1,5 +1,5 @@
 {% extends request.is_ajax|yesno:"aristotle_mdr/base_ajax.html,aristotle_mdr/base.html" %}
-{% load compile_static i18n %}
+{% load i18n %}
 {% load static from staticfiles %}
 
 {% block title %}{{ form_title }} for {{ item.name }}{% endblock %}
