--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/help/templates/aristotle_mdr_help/base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/help/templates/aristotle_mdr_help/base.html
@@ -1,5 +1,5 @@
 {% extends request.is_ajax|yesno:"aristotle_mdr/base_ajax.html,aristotle_mdr/base.html" %}
-{% load i18n static compile_static %}
+{% load i18n static %}
 {% load static from staticfiles %}
 {% load render_bundle from webpack_loader %}
 
