--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/edit_link.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/edit_link.html
@@ -1,5 +1,5 @@
 {% extends 'aristotle_mdr/base.html' %}
-{% load compile_static i18n util_tags %}
+{% load i18n util_tags %}
 {% load static from staticfiles %}
 {% load render_bundle from webpack_loader %}
 
