--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/newuser/register_form.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/newuser/register_form.html
@@ -1,5 +1,5 @@
 {% extends "aristotle_mdr/users_management/register_base.html" %}
-{% load aristotle_tags compile_static %}
+{% load aristotle_tags %}
 {% load static from staticfiles %}
 
 {% block title %}Signup to create a new account{% endblock %}
