--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/admin/base_site.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/admin/base_site.html
@@ -1,6 +1,6 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
-{% load staticfiles bootstrap3 compile_static %}
+{% load staticfiles bootstrap3 %}
 {% load notifications_tags %}
 
 {% block title %}{{ title }} - {{ config.SITE_NAME }}{% endblock %}
