--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base.html
@@ -1,4 +1,4 @@
-{% load i18n bootstrap3 compile_static aristotle_tags %}
+{% load i18n bootstrap3 aristotle_tags %}
 {% load static from staticfiles %}
 {% load render_bundle from webpack_loader %}
 
