--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/clone_item.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/clone_item.html
@@ -1,5 +1,5 @@
 {% extends 'aristotle_mdr/base.html' %}
-{% load compile_static i18n %}
+{% load i18n %}
 {% load static from staticfiles %}
 {% load render_bundle from webpack_loader %}
 
