--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/registration_authority/remove_member.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/registration_authority/remove_member.html
@@ -1,5 +1,5 @@
 {% extends request.is_ajax|yesno:"aristotle_mdr/base_ajax.html,aristotle_mdr/base.html" %}
-{% load compile_static i18n %}
+{% load i18n %}
 {% load aristotle_tags %}
 
 {% block title %}Remove user from registation authority {% firstof user_to_change.get_full_name user_to_change.email %}{% endblock %}
