--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/request_review_details.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/request_review_details.html
@@ -1,5 +1,5 @@
 {% extends request.is_ajax|yesno:"aristotle_mdr/base_ajax.html,aristotle_mdr/base.html" %}
-{% load compile_static i18n humanize %}
+{% load i18n humanize %}
 {% load aristotle_tags %}
 {% load static from staticfiles %}
 
