Move file size checker to after bundle, until template changed

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userEdit.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userEdit.html
@@ -7,10 +7,6 @@
     {% include "aristotle_mdr/user/userSideBar.html" with activeTab='edit' %}
 {% endblock %}
 
-{% block individual_scripts %}
-<script src="{% static 'constrainedfilefield/js/file_checker.js' %}"></script>
-{% endblock %}
-
 {% block outerpage %}
     <div class="col-md-6">
       <h1>Edit my account details</h1>
@@ -29,4 +25,8 @@
 
     </form>
 
+{% endblock %}
+
+{% block after_bundle %}
+  <script src="{% static 'constrainedfilefield/js/file_checker.js' %}"></script>
 {% endblock %}
