--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -2,7 +2,7 @@
 {% load i18n static %}
 {% load render_bundle from webpack_loader %}
 
-{% block individual_scripts %}
+{% block extra_head_scripts %}
 <script>
     delete_submit_url="{% url 'aristotle_mdr:sandbox_delete' %}";
 </script>
