Extra head scripts cleanup

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base.html
@@ -31,8 +31,7 @@
 
     {% block extra_head_scripts %}
         {% comment %}
-            Only for scripts that need to be inserted for other special templates
-            For example: look ups in supersedes, login, search, etc...
+          Should be using webpack instead of this tag
         {% endcomment %}
     {% endblock %}
 
