--- a/python/aristotle-mdr-api/aristotle_mdr_api/templates/aristotle_mdr_api/token_create.html
+++ b/python/aristotle-mdr-api/aristotle_mdr_api/templates/aristotle_mdr_api/token_create.html
@@ -1,10 +1,12 @@
 {% extends 'aristotle_mdr_api/base.html' %}
+{% load render_bundle from webpack_loader %}
 
-{% block extra_head_scripts %}
-{{ block.super }}
-{% if key %}
-<script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
-{% endif %}
+{% block webpack_css_bundle %}
+  {% render_bundle 'tokenCreate' 'css' %}
+{% endblock %}
+
+{% block webpack_bundle %}
+  {% render_bundle 'tokenCreate' 'js' %}
 {% endblock %}
 
 {% block api_content %}
@@ -24,13 +26,6 @@
 {% if key %}
 <p>Success! Your API key is <span id="key">{{ key }}</span> <button id="copybutton" class="btn btn-default btn-sm" data-clipboard-target="#key">Copy</button></p>
 <p>Be sure to copy your new token. As you will not be able to view it again</p>
-<script>
-if (ClipboardJS.isSupported()) {
-  new ClipboardJS('#copybutton');
-} else {
-  $('#copybutton').remove()
-}
-</script>
 {% endif %}
 
 {% if display_regenerate %}
