--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/admin/base_site.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/admin/base_site.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 {% load staticfiles bootstrap3 %}
-{% load notifications_tags %}
+{% load notifications_tags webpack_loader %}
 
 {% block title %}{{ title }} - {{ config.SITE_NAME }}{% endblock %}
 
@@ -11,9 +11,9 @@
 {% endblock %}
 
 {% block extrahead %}
-    <link rel="stylesheet" type="text/css" href="{% static 'bundles/vendors.css' %}" />
-    <script src="{% static 'bundles/vendors.js' %}" type="text/javascript"></script>
-    <script src="{% static 'bundles/admin.js' %}" type="text/javascript"></script>
+    {% render_bundle 'common' 'css' %}
+    {% render_bundle 'common' 'js' %}
+    {% render_bundle 'admin' 'js' %}
     {% include 'autocomplete_light/static.html' %}
 {% endblock %}
 
