Fix links display component

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr/links/links_display.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr/links/links_display.html
@@ -67,6 +67,6 @@
 {% endif %}
 
 {% if item|get_links %}
-<links-display v-cloak url="{% url 'aristotle_mdr_links:link_json_for_item' iid=item.id %}">
+<links-display url="{% url 'aristotle_mdr_links:link_json_for_item' iid=item.id %}">
 </links-display>
 {% endif %}
