--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -77,7 +77,7 @@
         {% if 'aristotle_mdr.contrib.slots'|is_active_module %}
             {% include "aristotle_mdr/slots/slots_display.html" %}
         {% endif %}
-        {% if 'aristotle_mdr.contrib.links'|is_active_module %}
+        {% if 'aristotle_mdr_links'|is_active_extension %}
             {% include "aristotle_mdr/links/links_display.html" %}
         {% endif %}
         <h2>Related content</h2>
