--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/actionbar.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/actionbar.html
@@ -42,7 +42,7 @@
             <i class="fa fa-fw fa-sitemap"></i> {% trans 'Check component states'%}
         </a></li>
         {% endif %}
-        {% if 'aristotle_mdr.contrib.links'|is_active_extension %}
+        {% if 'aristotle_mdr_links'|is_active_extension %}
             {% include "aristotle_mdr_links/actions/add_link_action.html" %}
         {% endif %}
       </ul>
