--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/ba_paginated_favourite_items.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/ba_paginated_favourite_items.html
@@ -31,7 +31,7 @@
           </i>
         </td>
         <td><a href="{% url 'aristotle_mdr:item' item.id %}">{{ item.name }}</a></td>
-        <td>{{ item.definition }}</td>
+        <td>{{ item.definition|striptags }}</td>
         {% if tags_list %}
           <td>
             <ul class="taggle_list">
