--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/static/about_aristotle_dse.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/static/about_aristotle_dse.html
@@ -5,18 +5,21 @@
 {% block content %}
 <div class="row">
 <h1><a href="#">Aristotle Dataset Extensions</a></h1>
-<p>The Aristotle Dataset Extensions adds two additional content types for the
-<a href="https://github.com/LegoStormtroopr/aristotle-metadata-registry">Aristotle MetaData Registry</a>
+<p>The Aristotle Dataset Extensions adds additional content types for the
+<a href="https://github.com/aristotle-mdr/aristotle-metadata-registry">Aristotle Metadata Registry</a>
 that allow for the tracking and registration of datasets and dataset metadata.
 </p>
 
-<p><b>Aristotle-DSE</b> adds the following 2 <a href='{% url "aristotle:about" template="administeditems" %}'>administed items</a>:
+<p><b>Aristotle-DSE</b> adds the following metadata items</a>:
 <ul>
     <li>
-        <a href='{% url "aristotle_dse:about" template="datasource" %}'>Data Sources</a>
+       Datasets
     </li>
     <li>
-        <a href='{% url "aristotle_dse:about" template="datasetspecification" %}'>Dataset Specification</a>
+       Distributions
+    </li>
+    <li>
+        Dataset Specifications
     </li>
 </ul>
 </p>
