--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/dataSetSpecification.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/dataSetSpecification.html
@@ -3,6 +3,7 @@
 {% load aristotle_tags i18n util_tags %}
 
 {% block extra_head_scripts %}
+{{ block.super }}
 <link rel="stylesheet" href="{{ STATIC_URL }}/aristotle_dse/aristotle_dse.css" />
 {% endblock %}
 
