--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/distribution.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/distribution.html
@@ -2,6 +2,7 @@
 {% load i18n aristotle_tags %}
 
 {% block extra_head_scripts %}
+{{ block.super }}
 <style>
     .file_type {
         border:1px solid black;
