Don't show fk edits on share item page

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/generic/templates/aristotle_mdr/generic/helpers/fk_alter_link.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/generic/templates/aristotle_mdr/generic/helpers/fk_alter_link.html
@@ -1,5 +1,5 @@
 {% load aristotle_tags %}
-{% if parent_item|can_edit:request.user %}
+{% if parent_item|can_edit:request.user and not hide_item_actions %}
     {% if item %}
         <a href="{{ item.get_absolute_url }}">
         {% if space %}
