--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
@@ -1,5 +1,5 @@
 {% extends "aristotle_mdr/user/base.html" %}
-{% load aristotle_tags compile_static %}
+{% load aristotle_tags compile_static humanize %}
 {% load static from staticfiles %}
 
 
@@ -52,20 +52,22 @@
 
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <i class="fa fa-bookmark fa-fw"></i>
-                    <span class="panel-title">Recent Favourites</span>
-                    <a href="{% url 'aristotle:userFavourites' %}">See more</a>
+                    <i class="fa fa-list-alt fa-fw"></i>
+                    <span class="panel-title">Recently viewed metadata</span>
+                    <a href="{% url 'recently_viewed_metadata' %}">See more</a>
                 </div>
 
                 <div class="list-group">
-                    {% for item in user.profile.favourites.all|slice:':5' %}
-                      <a class="list-group-item" href="{{ item.get_absolute_url }}">
-                        {{ item }}
-                        <small>({{ item.item.get_verbose_name }})</small>
+                    {% for view in recently_viewed %}
+                      <a class="list-group-item" href="{{ view.concept.get_absolute_url }}">
+                        {{ view.concept }}
+                        <small>({{ view.concept.item.get_verbose_name }})</small>
+                        <br>
+                        <small>{{view.view_date|naturaltime}}</small>
                       </a>
 
                     {% empty %}
-                        <a class="list-group-item"> No favourites </a>
+                        <a class="list-group-item"> No recently viewed metadata </a>
                     {% endfor %}
                 </div>
             </div>
