minor discussion list tweak

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/discussions/discussion_list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/discussions/discussion_list.html
@@ -3,22 +3,21 @@
 <table class='table'>
     <thead>
         <tr>
-            <th>Author</th>
             <th>Title <small class="visible-xs-inline">(and workgroup)</small></th>
             {% if showWorkgroups %}
                 <th class="hidden-xs">Workgroup</th>
             {% endif %}
+            <th>Author</th>
+            <th title="Number of comments"><i class="fa fa-comments-o"></i></th>
             <th>Latest comment</th>
         </tr>
     </thead>
     <tbody>
     {% for post in discussions %}
         <tr>
-            <td>{{ post.author }}<br>
-                <small>{{ post.created|naturaltime }}</small>
-            </td>
             <td>
                 <a href="{% url 'aristotle:discussionsPost' post.id %}">{{ post.title }}</a>
+                <br><small>{{ post.created|naturaltime }}</small>
                 {% if showWorkgroups %}
                 <span class="visible-xs-block">
                     In <a href="{% url 'aristotle:discussionsWorkgroup' post.workgroup.id %}" title="View discussions for this workgroup only">{{ post.workgroup }}</a>
@@ -30,12 +29,16 @@
                 <a href="{% url 'aristotle:discussionsWorkgroup' post.workgroup.id %}" title="View discussions for this workgroup only">{{ post.workgroup }}</a>
             </td>
             {% endif %}
+            <td>{{ post.author }}
+            </td>
+            <td>
+                    {{ post.comments.count }}
+            </td>
             <td>
                 {% if post.comments.last %}
                     <a href="{% url 'aristotle:discussionsPost' post.id %}#comment_{{post.comments.last.id}}"
                         title="Jump to last comment">
                         {{ post.comments.last.author }}, {{ post.comments.last.created|naturaltime }}</a>
-                    ({{ post.comments.count }} total)
                 {% else %}
                     -
                 {% endif %}
