Load aristotle tags on adv editor template

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/advanced_editor.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/advanced_editor.html
@@ -1,5 +1,5 @@
 {% extends request.is_ajax|yesno:"aristotle_mdr/base_ajax.html,aristotle_mdr/base.html" %}
-{% load i18n %}
+{% load i18n aristotle_tags %}
 {% load static from staticfiles %}
 {% load render_bundle from webpack_loader %}
 
