--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/view_history/templates/aristotle_mdr/dashboard/recently_viewed.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/view_history/templates/aristotle_mdr/dashboard/recently_viewed.html
@@ -55,7 +55,7 @@ history by clicking the "Clear history" button below.
             {% if not hide_favourites %}
               {% if request.user.is_active %}
               {% with is_favourite=item|is_in:favourites %}
-                  <a href="{% url 'aristotle:toggleFavourite' item.id %}?next={{ request.path }}"
+                  <a href="{% url 'aristotle_favourites:toggleFavourite' item.id %}?next={{ request.path }}"
                       title="{% ternary is_favourite 'Remove from my favourite items' 'Add to my favourite items' %}"
                       >
                       {% if is_favourite %}
