Fix distinct filter

--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/dataSetSpecification.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/dataSetSpecification.html
@@ -1,6 +1,6 @@
 {% extends "aristotle_mdr/concepts/managedContent.html" %}
 
-{% load aristotle_tags i18n static %}
+{% load aristotle_tags util_tags i18n static %}
 {% load render_bundle from webpack_loader %}
 
 {% block webpack_css_bundle %}
