--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/widgets/table_checkbox_select.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/widgets/table_checkbox_select.html
@@ -10,7 +10,7 @@
   {% for group, options, index in widget.optgroups %}{% if group %}
   <td>{{ group }}<table{% if id %} id="{{ id }}_{{ index }}"{% endif %}>{% endif %}
     {% for option in options %}
-    <tr {% if not option.permission %}class="danger"{% endif %}>{% include option.template_name with widget=option enabled=option.permission %}
+    <tr {% if not option.permission %}class="danger"{% endif %}>{% include option.template_name with widget=option enabled=option.permission checked=option.checked %}
       {% for item in option.extra %}
       {% if item.url %}
       <td><a href={{ item.url }}>{{ item.text }}</a></td>
