Build and return dict as item

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/titles/display_title.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/titles/display_title.html
@@ -15,10 +15,12 @@
         >{{ item.get_verbose_name }}</a>)
     </small>
 
-    {# Screen reader quick links #}
-    {% if item|can_edit:request.user and request.user.is_staff %}
-        <a class="sr-only" accesskey="p" href="{% adminEdit item %}">{% trans 'Edit in admin'%}</a>
-    {% elif item|can_edit:request.user %}
-        <a class="sr-only" accesskey="e" href="{% url 'aristotle:edit_item' item.id %}">{% trans 'Open item editor'%}</a>
+    {% if not hide_item_actions %}
+      {# Screen reader quick links #}
+      {% if item|can_edit:request.user and request.user.is_staff %}
+          <a class="sr-only" accesskey="p" href="{% adminEdit item %}">{% trans 'Edit in admin'%}</a>
+      {% elif item|can_edit:request.user %}
+          <a class="sr-only" accesskey="e" href="{% url 'aristotle:edit_item' item.id %}">{% trans 'Open item editor'%}</a>
+      {% endif %}
     {% endif %}
 </h1>
